--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 /* 16px = 100% = 1rem/em e.g: 100px = 625% = 6.25rem/em */
 body {
   color: #40514E;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   margin: 0;
   text-align: center;
@@ -15,7 +15,7 @@ h1 {
   -webkit-text-fill-color: transparent;
   font-size: 5.625rem;
   margin: 50px auto 0 auto;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Oxygen', sans-serif;
   line-height: 2.5;
 }
 
@@ -24,11 +24,12 @@ h2 {
   background: linear-gradient(270deg, #b8fb3b 30%, #5ce5d5 50%, #a162e8 70%, #7898fb 90%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Oxygen', sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
   line-height: 1.5rem;
-  padding-bottom: 2%;
+  padding-bottom: 1%;
+  padding-top: 1%;
 }
 
 h3 {
@@ -36,7 +37,7 @@ h3 {
   background: linear-gradient(270deg, #5ce5d5 50%, #a162e8 70%, #7898fb 90%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Oxygen', sans-serif;
   line-height: 2;
 }
 
@@ -105,7 +106,7 @@ p {
   right: 200px;
   top: 220px;
   animation: spin 3600s steps(60, end) infinite;
-  width: 15%;
+  /* width: 15%; */
 }
 
 @keyframes spin {
@@ -119,7 +120,7 @@ p {
   left: 200px;
   top: 220px;
   animation: spin 1000ms steps(60, end) infinite;
-  width: 15%;
+  /* width: 15%; */
 }
 
 @keyframes spin {
@@ -131,7 +132,7 @@ p {
 /* middle penta */
 .mountain {
   animation: spin 60s steps(60, end) infinite;
-  width: 15%;
+  /* width: 15%; */
 }
 
 @keyframes spin {
@@ -232,7 +233,7 @@ p {
   color: #161616;
   font-size: 5.625rem;
   margin: auto;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   padding-top: 100px;
   padding-bottom: 20px;
@@ -242,29 +243,34 @@ p {
   color: #f05454;
   font-size: 2.5rem;
   margin: auto;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
 }
 
 .btn {
-  background: #f093b0;
-  background-image: -webkit-linear-gradient(top, #f093b0, #a162e8);
-  background-image: -moz-linear-gradient(top, #f093b0, #a162e8);
-  background-image: -ms-linear-gradient(top, #f093b0, #a162e8);
-  background-image: -o-linear-gradient(top, #f093b0, #a162e8);
-  background-image: linear-gradient(to bottom, #f093b0, #a162e8);
-  -webkit-border-radius: 60;
-  -moz-border-radius: 60;
-  border-radius: 60px;
-  font-family: 'Ubuntu', sans-serif;
-  color: black;
-  font-size: 20px;
-  padding: 9px 18px 9px 18px;
+  background: #b8fb3b;
+  background-image: -webkit-linear-gradient(top, #b8fb3b, #5ce5d5);
+  background-image: -moz-linear-gradient(top, #b8fb3b, #5ce5d5);
+  background-image: -ms-linear-gradient(top, #b8fb3b, #5ce5d5);
+  background-image: -o-linear-gradient(top, #b8fb3b, #5ce5d5);
+  background-image: linear-gradient(to bottom, #b8fb3b, #5ce5d5);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #e5fffb;
+  font-size: 18px;
+  padding: 13px 29px 13px 29px;
   text-decoration: none;
 }
 
 .btn:hover {
-  background: #bebebe;
+  background: #a162e8;
+  background-image: -webkit-linear-gradient(top, #a162e8, #7898fb);
+  background-image: -moz-linear-gradient(top, #a162e8, #7898fb);
+  background-image: -ms-linear-gradient(top, #a162e8, #7898fb);
+  background-image: -o-linear-gradient(top, #a162e8, #7898fb);
+  background-image: linear-gradient(to bottom, #a162e8, #7898fb);
   text-decoration: none;
 }
 
